[package]

name = "pretty"
version = "0.0.6"
authors = [ "Jonathan Sterling <jon@jonmsterling.com>",
            "Darin Morrison <darinmorrison+epsilonz@gmail.com>",
            "Jared Roesch <joresch@cs.washington.edu>" ]
description = "Wadler-style pretty-printing combinators in Rust"
documentation = "http://epsilonz.github.io/pretty.rs/doc/pretty/"
keywords = ["console", "functional", "pretty-printing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hubris/pretty"

[lib]
doc = true
doctest = false
name = "pretty"
path = "src/lib.rs"

[[bin]]
doc  = false
name = "trees"
path = "examples/trees.rs"

[dependencies]
itertools = "*"
